[release] Improve on module path discovery.